<resources>
    <string name="app_name">SmilesDaBarber</string>
    <string name="btnRegisterlbl">Register</string>
    <string name="btnLoginlbl">Login</string>
    <string name="emailHint">Enter Email</string>
    <string name="passwordHint">Enter Password</string>
    <string name="hintEnterName">Enter Name</string>
    <string name="HintClientPhoneNumber">Enter Phone Number</string>
    <string name="title_activity_client_home">ClientHome</string>
    <string name="btnlblrequestAppointment">Request Appointment</string>
    <string name="btnlblContactSmiles">Contact Smiles</string>
    <string name="btnlblViewStyles"> Styles / Prices</string>
    <string name="txtLblSelectStyle">Select Style </string>
    <string name="AppointmentInfolbl">All appointments are on a first come first serve basis </string>
    <string name="checkboxBeardlbl">Beard Shape Up</string>
    <string name="btnMakeAppointlbl">Make Appointment</string>
    <string name="notify_clients">Notify Clients</string>
    <string name="Cuts">Todays cuts</string>
    <string name="clientnotificationprompt">Enter Notification</string>
    <string name="notifyindividualprompt">Notify Selected Client</string>
    <string name="todays_cuts">Todays Cuts</string>
    <string name="cut_clientbtn">Cut</string>
    <string name="cancel_cutbtn">Cancel Cut</string>

    <string-array name="appointment_Days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wenesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <string-array name="Style">
        <item>Brush Cut</item>
        <item>Fade</item>
        <item>Shape Up</item>
        <item>Tappered Fro</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ClientNamePrompt">Enter Client Name</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="kids_cut">Kids Cut</string>
    <string name="college_cut">College Cut</string>
    <string name="line_up_trim_non_mobile_only">Line Up/Trim(Non mobile only)</string>
    <string name="razor_line">Razor Line</string>
    <string name="salisbury_nc_mobile_cut">Salisbury(NC) Mobile Cut</string>
    <string name="_15_20_mile_radius_mobile_cut">15-20 Mile(Radius)Mobile Cut</string>
    <string name="_25_40_mile_radius_mobile_cut">25-40 Mile(Radius)Mobile Cut</string>
    <string name="_45_55_mile_radius_mobile_cut">45-55 Mile(Radius)Mobile Cut</string>
    <string name="textview">TextView</string>
</resources>
