<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="busterarchie.com.smilesdabarber.RegisterClient">

    <EditText
        android:id="@+id/edtClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/hintEnterName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/HintClientPhoneNumber"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edtClientName"
        app:layout_constraintTop_toBottomOf="@+id/edtClientName" />

    <EditText
        android:id="@+id/edtClientEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edtClientNumber"
        app:layout_constraintTop_toBottomOf="@+id/edtClientNumber" />

    <Button
        android:id="@+id/btnRegisterNewClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/btnRegisterlbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtClientPassword" />

    <EditText
        android:id="@+id/edtClientPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edtClientEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtClientEmail" />
</android.support.constraint.ConstraintLayout>
