<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="busterarchie.com.smilesdabarber.Activities.ClientHome"
    tools:showIn="@layout/activity_client_home">

    <ImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="198dp"
        app:layout_constraintBottom_toTopOf="@+id/btnViewStyles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smileslogopng" />

    <Button

        android:id="@+id/btnRequestAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:background="@drawable/input_fields"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:shadowRadius="22"
        android:text="@string/btnlblrequestAppointment"
        android:textColor="#ffff"
        app:layout_constraintBottom_toTopOf="@+id/btnContactSmiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfileImage" />

    <Button
        android:id="@+id/btnContactSmiles"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="201dp"
        android:background="@drawable/input_fields"
        android:drawableLeft="@android:drawable/sym_action_call"
        android:text="@string/btnlblContactSmiles"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnRequestAppointment"
        app:layout_constraintTop_toBottomOf="@+id/btnRequestAppointment" />

    <Button
        android:id="@+id/btnViewStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/input_fields"
        android:text="@string/btnlblViewStyles"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnContactSmiles"
        app:layout_constraintTop_toBottomOf="@+id/imgProfileImage" />

    <ImageView
        android:id="@+id/ImgChairsOpenSign"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/smileslogopng" />
</android.support.constraint.ConstraintLayout>
